src/test/run-pass/numbers-arithmetic/arith-0.rs
// run-pass


pub fn main() {
    let a: isize = 10;
    println!("{}", a);
    assert_eq!(a * (a - 1), 90);
}
